# fastapi_app

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_01_14_1235-b4c676ea80de_init.py  2024_01_15_0714-496aad61dcef_add_rewiew.py  2024_01_16_1728-9a3039d52198_init.py  [14-01-2024] 70f9acc1d3b4_add_product.py  [14-01-2024] b4c676ea80de_init.py
api_v1/: __init__.py
api_v1/auth/: jwt_auth.py
api_v1/products/: crud.py  dependencies.py  views.py
api_v1/products/shemas/: product.py
api_v1/reviews/: crud.py  views.py
api_v1/shemas/: product.py  review.py
auth/: README.md  token_utils.py
conf/: alembic.ini  config.py  gunicorn.conf.py
exceptions/: eceptions.py
models/: __init__.py  product.py  profile.py  review.py  token.py  user.py
scripts/: startup.sh
users/: crud.py  views.py
users/schemas/: response.py  user.py
webapp/: db.py  deps.py  main.py
